# tentactl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
skill/: SKILL.md
skill/scripts/: setup-keys.sh
src/: lib.rs  main.rs  server.rs
src/kraken/: client.rs  error.rs  futures_client.rs  futures_types.rs  mod.rs  types.rs  ws.rs  ws_futures.rs
src/tools/: futures_market.rs  futures_trading.rs  mod.rs  spot_account.rs  spot_earn.rs  spot_funding.rs  spot_market.rs  spot_subaccount.rs  spot_trading.rs  ws_futures.rs  ws_spot.rs
tests/: client_mock.rs  error_handling.rs  mcp_integration.rs  signing.rs  types_deserialize.rs
tests/common/: mod.rs
